# amr_ws

./: .gitignore  README.md
src/amr_lidar_mapping/: CmakeLists.txt  package.xml
src/amr_lidar_mapping/config/: slam_toolbox.yaml
src/amr_lidar_mapping/launch/: lidar_slam.launch.py
src/edabot_bringup/: CMakeLists.txt  README.md  package.xml
src/edabot_bringup/launch/: robot.launch.py  simulation.launch.py
src/edabot_communication/: CMakeLists.txt  README.md  package.xml
src/edabot_communication/include/edabot_communication/: visibility_control.h
src/edabot_communication/launch/: communication.launch.py
src/edabot_communication/src/: friend_pose.cpp  navigate_to_goal_action_client.cpp
src/edabot_controller/: CMakeLists.txt  README.md  package.xml
src/edabot_controller/config/: edabot_controller.yaml  joy_teleop.yaml  twist_mux.yaml
src/edabot_controller/launch/: controller.launch.py  joy_teleop.launch.py
src/edabot_description/: CMakeLists.txt  README.md  package.xml
src/edabot_description/launch/: display.launch.py  gazebo.launch.py
src/edabot_description/meshes/: camera_support.stl
src/edabot_description/rviz/: display.rviz
src/edabot_description/urdf/: edabot.gazebo.xacro  edabot.ros2_control.xacro  edabot.urdf.xacro
src/edabot_firmware/: CMakeLists.txt  README.md  edabot_interface.xml  package.xml
src/edabot_firmware/launch/: hardware_interface.launch.py
src/edabot_firmware/src/: edabot_interface.cpp
src/edabot_mapping/: CMakeLists.txt  README.md  package.xml
src/edabot_mapping/config/: common-template.yaml
src/edabot_mapping/launch/: rtabmap.launch.py  rtabmap_rgbd.launch.py  rtabmap_stereo.launch.py  slam.launch.py
src/edabot_navigation/: CMakeLists.txt  README.md  package.xml
src/edabot_navigation/config/: behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  planner_server.yaml
src/edabot_navigation/launch/: navigation.launch.py
src/edabot_vision/: README.md  package.xml  setup.cfg  setup.py
src/edabot_vision/edabot_vision/: object_detection.py  person.py  safety.py  unperson.py
(+5 files in other folders)
